<resources>
    <string name="app_name">GreenLight</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Dashboard</string>
    <string name="dashboard_screen">Dashboard</string>
    <string name="login_screen">Login</string>
    <string name="user_profile_screen">Perfil</string>
    <string name="vehicle_list_screen">Cadastrar Veículo</string>
    <string name="vehicle_trips_screen">Cadastrar Viagem</string>
    <string name="link_User_Profile_Menu">Perfil</string>
    <string name="link_Login_Menu">Login</string>
    <string name="link_Logout_Menu">Logout</string>
    <string name="link_Vehicle_Register_Menu">Seus veículos</string>
    <string name="link_Car_Trips_Menu">Suas Viagens</string>

    <!-- Permissions -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cadastro">Cadastro</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="confirme_a_senha">Confirme a senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="endereco">Endereço</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="username">Username</string>
    <string name="c_digo_postal">Código Postal</string>
    <string name="nome_da_viagem">Nome da viagem</string>
    <string name="partida">Partida:</string>
    <string name="partida_viagem">Partida</string>
    <string name="destino">Destino</string>
    <string name="destino_viagem">Destino:</string>
    <string name="distancia">Distancia</string>
    <string name="km">Km</string>
    <string name="veiculo">Veiculo</string>
    <string name="co2emitido">CO2Emitido</string>
    <string name="ve_culo">Veículo:</string>
    <string name="g_km">g/Km</string>
    <string name="modelo">Modelo</string>
    <string name="modelo">Modelo</string>
    <string name="marca">marca</string>
    <string name="combustivel">combustivel</string>
    <string name="modelo_show_vehicle">Modelo:</string>
    <string name="marca_show_vehicle">Marca:</string>
    <string name="placa_show_vehicle">Placa:</string>
    <string name="combustivel_show_vehicle">Combustivel:</string>
    <string name="ano_show_vehicle">Ano:</string>
    <string name="distancia_em_km">Distancia em Km</string>
    <string name="cadastrar_viagem">Cadastrar Viagem</string>
    <string name="selecione_um_ve_culo">Selecione um Veículo</string>
    <string name="nome_da_viagem_fragment">Nome da Viagem</string>
    <string name="destino">Destino</string>
    <string name="partida_trip">Partida</string>
    <string name="cadastro_de_viagens">Cadastro de Viagens</string>
    <string name="email">Email</string>
    <string name="email_profile">Email:</string>
    <string name="data_de_nascimento_profile">Data de Nascimento:</string>
    <string name="c_digo_postal_profile">código postal</string>
    <string name="endere_o">endereço</string>
    <string name="perfil">PERFIL</string>
    <string name="nome">nome</string>
    <string name="username_txtview">Username:</string>
    <string name="nome_textview">Nome:</string>
    <string name="c_digo_postal_txtview">Código Postal:</string>
    <string name="endere_o_txtview">Endereço:</string>
    <string name="placa">Placa:</string>
    <string name="tipo_de_combust_vel">Tipo de combustível:</string>
    <string name="ano">Ano:</string>
    <string name="placa_do_ve_culo">Placa do veículo</string>
    <string name="ano_do_ve_culo">Ano do veículo</string>
    <string name="marca_do_ve_culo">Marca do veículo</string>
    <string name="modelo_do_ve_culo">Modelo do veículo</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="marca_txtview">Marca:</string>
    <string name="modelo_do_ve_culo_txtview">Modelo do Veículo:</string>
    <string name="cadastro_de_ve_culo">Cadastro de Veículo:</string>
</resources>