<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/dashboardFragment">
    <fragment
        android:id="@+id/dashboardFragment"
        android:name="br.com.greenlight.views.DashboardFragment"
        android:label="@string/dashboard_screen"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboardFragment_to_vehicleTripFragment3"
            app:destination="@id/vehicleTripFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_vehicleFragment2"
            app:destination="@id/vehicleFragment" />
    </fragment>
    <fragment
        android:id="@+id/vehicleTripFragment"
        android:name="br.com.greenlight.ui.trip.VehicleTripFragment"
        android:label="@string/vehicle_trips_screen"
        tools:layout="@layout/vehicle_trip_fragment" />
    <fragment
        android:id="@+id/vehicleFragment"
        android:name="br.com.greenlight.ui.vehicle.form.VehicleFragment"
        android:label="@string/vehicle_list_screen"
        tools:layout="@layout/vehicle_fragment" />
</navigation>