<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewVehicleModelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/allerta"
        android:hint="@string/modelo"
        android:text="@string/modelo"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewVehicleMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/allerta"
        android:text="@string/marca"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVehicleModelo" />

    <TextView
        android:id="@+id/textViewVehicleCombustivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/allerta"
        android:text="@string/combustivel"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textViewVehicleAno"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewVehicleAno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/allerta"
        android:text="ano"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textViewVehicleModelo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewVehiclePlaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/allerta"
        android:text="placa"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textViewVehicleMarca"
        app:layout_constraintTop_toBottomOf="@+id/textViewVehicleModelo" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/textViewVehicleMarca" />

    <ImageButton
        android:id="@+id/btnDeleteVehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#CA0E0E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />
</androidx.constraintlayout.widget.ConstraintLayout>